--- a/style.css
+++ b/style.css
@@ -31,3 +31,8 @@ li a:hover {
 .active {
   background-color:lightblue;
 }
+
+h1 {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 24px;
+}
