--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-ul {
+.menu {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -35,4 +35,12 @@ li a:hover {
 h1 {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 24px;
+}
+
+h2, p, li {
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+.inhoud {
+	margin: 4vw;
 }
