--- a/style.css
+++ b/style.css
@@ -11,11 +11,6 @@
 
 }
 
-.center {
-  margin-left: auto;
-  margin-right: auto;
-}
-
 li {
   float: left;
 }
@@ -42,10 +37,63 @@ h1 {
 	font-size: 24px;
 }
 
-h2, p, li {
+h1{
+    margin-left: auto;
+    margin-right: auto;
+    width: 6em;
+		border-radius: 1em;
+    padding: 1em;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+}
+
+h2, p, li, label {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
 .inhoud {
-	margin: 2vw;
+	margin: 3vw;
+	background-blend-mode: 
+}
+
+.startpagina {
+background-image: url("../images/background.jpg");
+color: white;
+background-size: cover;
+margin: 0;
+font-size: 1rem;
+font-weight: 400;
+line-height: 1.5;
+text-align: left;
+}
+
+.pagina {
+background-color: black;
+color: white;
+margin: 0;
+font-size: 1rem;
+font-weight: 400;
+line-height: 1.5;
+text-align: left;
+}
+
+iframe {
+	width: 100%;
+	height: 50vw;
+}
+
+.profielfoto {
+	width: 10vw;
+}
+
+.about {
+	float: left;
+}
+
+img {
+	width: 100%;
+	max-width: 400px;
 }
